[gd_scene load_steps=7 format=3 uid="uid://dvyjckasvqbfu"]

[ext_resource type="FontFile" uid="uid://cgrup1wbbgame" path="res://assets/fonts/VT323-Regular.ttf" id="1_g52nw"]
[ext_resource type="Script" path="res://src/gameplay/TerminalLogic.gd" id="1_id5ji"]
[ext_resource type="Script" path="res://src/ui/VainamoinenTitleAnimation.gd" id="3_tilix"]

[sub_resource type="Theme" id="Theme_owhnr"]
default_font = ExtResource("1_g52nw")
default_font_size = 0

[sub_resource type="Theme" id="Theme_q60y3"]
default_font = ExtResource("1_g52nw")
default_font_size = 60

[sub_resource type="Theme" id="Theme_m501g"]
default_font = ExtResource("1_g52nw")
default_font_size = 125

[node name="Terminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TerminalLogic" type="Node" parent="."]
script = ExtResource("1_id5ji")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="VainamoinenTitle" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -868.0
offset_right = 897.0
offset_bottom = 447.0
grow_horizontal = 2
theme = SubResource("Theme_owhnr")
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "          _____                    _____                    _____                    _____                    _____                    _____                   _______                   _____                    _____                    _____                    _____          
         /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\                 /::\\    \\                 /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\         
        /::\\____\\                /::\\    \\                /::\\    \\                /::\\____\\                /::\\    \\                /::\\____\\               /::::\\    \\               /::\\    \\                /::\\____\\                /::\\    \\                /::\\____\\        
       /:::/    /               /::::\\    \\               \\:::\\    \\              /::::|   |               /::::\\    \\              /::::|   |              /::::::\\    \\              \\:::\\    \\              /::::|   |               /::::\\    \\              /::::|   |        
      /:::/    /               /::::::\\    \\               \\:::\\    \\            /:::::|   |              /::::::\\    \\            /:::::|   |             /::::::::\\    \\              \\:::\\    \\            /:::::|   |              /::::::\\    \\            /:::::|   |        
     /:::/    /               /:::/\\:::\\    \\               \\:::\\    \\          /::::::|   |             /:::/\\:::\\    \\          /::::::|   |            /:::/~~\\:::\\    \\              \\:::\\    \\          /::::::|   |             /:::/\\:::\\    \\          /::::::|   |        
    /:::/____/               /:::/__\\:::\\    \\               \\:::\\    \\        /:::/|::|   |            /:::/__\\:::\\    \\        /:::/|::|   |           /:::/    \\:::\\    \\              \\:::\\    \\        /:::/|::|   |            /:::/__\\:::\\    \\        /:::/|::|   |        
    |::|    |               /::::\\   \\:::\\    \\              /::::\\    \\      /:::/ |::|   |           /::::\\   \\:::\\    \\      /:::/ |::|   |          /:::/    / \\:::\\    \\             /::::\\    \\      /:::/ |::|   |           /::::\\   \\:::\\    \\      /:::/ |::|   |        
    |::|    |     _____    /::::::\\   \\:::\\    \\    ____    /::::::\\    \\    /:::/  |::|   | _____    /::::::\\   \\:::\\    \\    /:::/  |::|___|______   /:::/____/   \\:::\\____\\   ____    /::::::\\    \\    /:::/  |::|   | _____    /::::::\\   \\:::\\    \\    /:::/  |::|   | _____  
    |::|    |    /\\    \\  /:::/\\:::\\   \\:::\\    \\  /\\   \\  /:::/\\:::\\    \\  /:::/   |::|   |/\\    \\  /:::/\\:::\\   \\:::\\    \\  /:::/   |::::::::\\    \\ |:::|    |     |:::|    | /\\   \\  /:::/\\:::\\    \\  /:::/   |::|   |/\\    \\  /:::/\\:::\\   \\:::\\    \\  /:::/   |::|   |/\\    \\ 
    |::|    |   /::\\____\\/:::/  \\:::\\   \\:::\\____\\/::\\   \\/:::/  \\:::\\____\\/:: /    |::|   /::\\____\\/:::/  \\:::\\   \\:::\\____\\/:::/    |:::::::::\\____\\|:::|____|     |:::|    |/::\\   \\/:::/  \\:::\\____\\/:: /    |::|   /::\\____\\/:::/__\\:::\\   \\:::\\____\\/:: /    |::|   /::\\____\\
    |::|    |  /:::/    /\\::/    \\:::\\  /:::/    /\\:::\\  /:::/    \\::/    /\\::/    /|::|  /:::/    /\\::/    \\:::\\  /:::/    /\\::/    / ~~~~~/:::/    / \\:::\\    \\   /:::/    / \\:::\\  /:::/    \\::/    /\\::/    /|::|  /:::/    /\\:::\\   \\:::\\   \\::/    /\\::/    /|::|  /:::/    /
    |::|    | /:::/    /  \\/____/ \\:::\\/:::/    /  \\:::\\/:::/    / \\/____/  \\/____/ |::| /:::/    /  \\/____/ \\:::\\/:::/    /  \\/____/      /:::/    /   \\:::\\    \\ /:::/    /   \\:::\\/:::/    / \\/____/  \\/____/ |::| /:::/    /  \\:::\\   \\:::\\   \\/____/  \\/____/ |::| /:::/    / 
    |::|____|/:::/    /            \\::::::/    /    \\::::::/    /                   |::|/:::/    /            \\::::::/    /               /:::/    /     \\:::\\    /:::/    /     \\::::::/    /                   |::|/:::/    /    \\:::\\   \\:::\\    \\              |::|/:::/    /  
    |:::::::::::/    /              \\::::/    /      \\::::/____/                    |::::::/    /              \\::::/    /               /:::/    /       \\:::\\__/:::/    /       \\::::/____/                    |::::::/    /      \\:::\\   \\:::\\____\\             |::::::/    /   
    \\::::::::::/____/               /:::/    /        \\:::\\    \\                    |:::::/    /               /:::/    /               /:::/    /         \\::::::::/    /         \\:::\\    \\                    |:::::/    /        \\:::\\   \\::/    /             |:::::/    /    
     ~~~~~~~~~~                    /:::/    /          \\:::\\    \\                   |::::/    /               /:::/    /               /:::/    /           \\::::::/    /           \\:::\\    \\                   |::::/    /          \\:::\\   \\/____/              |::::/    /     
                                  /:::/    /            \\:::\\    \\                  /:::/    /               /:::/    /               /:::/    /             \\::::/    /             \\:::\\    \\                  /:::/    /            \\:::\\    \\                  /:::/    /      
                                 /:::/    /              \\:::\\____\\                /:::/    /               /:::/    /               /:::/    /               \\::/____/               \\:::\\____\\                /:::/    /              \\:::\\____\\                /:::/    /       
                                 \\::/    /                \\::/    /                \\::/    /                \\::/    /                \\::/    /                 ~~                      \\::/    /                \\::/    /                \\::/    /                \\::/    /        
                                  \\/____/                  \\/____/                  \\/____/                  \\/____/                  \\/____/                                           \\/____/                  \\/____/                  \\/____/                  \\/____/         
                                                                                                                                                                                                                                                                                   

"
autowrap_mode = 0
script = ExtResource("3_tilix")

[node name="Print" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -880.0
offset_top = -138.0
offset_right = 885.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q60y3")
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "Welcome to the DEBUG interface for the VÄINÄMÖINEN general purpose assistant. You are currently using VERSION: 40.51

You have the following commands available:
-------------------------------------------
\"help\" - show this list of commands
\"list\" - list available files
\"open <filename>\" - read a file (NEW: supports images and audio)"
scroll_active = false

[node name="Input" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_m501g")
theme_override_fonts/font = ExtResource("1_g52nw")
caret_blink = true

[node name="Prints" type="Node" parent="."]

[node name="Help" type="RichTextLabel" parent="Prints"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -880.0
offset_top = -138.0
offset_right = 885.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q60y3")
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "You have the following commands available:
-------------------------------------------
\"help\" - show this list of commands
\"list\" - list available files
\"open <filename>\" - read a file (NEW: supports images and audio)"

[node name="FileList" type="RichTextLabel" parent="Prints"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -882.0
offset_top = -165.0
offset_right = 883.0
offset_bottom = 495.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q60y3")
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "You have the following files available:
-------------------------------------------
log-05.06.2062.log, log-12.12.2070.log, log-25.01.2072.log, a!PO!#%k.log

1902.image, 1903.image, 9bkd439.image, 1907.image, 1910.image

log-07.01.2073.audio, 1-2sd_l<?asd.audio


"

[node name="UnknownCommand" type="RichTextLabel" parent="Prints"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -882.0
offset_top = -165.0
offset_right = 883.0
offset_bottom = 495.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q60y3")
theme_override_colors/default_color = Color(0, 1, 0, 1)
text = "UNKNOWN COMMAND

Type \"help\" to see available commands"

[connection signal="done" from="VainamoinenTitle" to="TerminalLogic" method="_on_vainamoinen_title_done"]
